feature/Swagger docs and refactoring
